--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 /* Created by: Andre Deveau
-* Created on: Oct 2022
+* Created on: Dec 2022
 * This file contains the CSS for index.html
 */
 
@@ -36,4 +36,6 @@ p {
 img {
   float: right;
   margin-right: 15px;
+  height: 25%;
+  width: auto;
 }
